--- a/.travis.yml
+++ b/.travis.yml
@@ -10,15 +10,11 @@ env:
 #    - ARCH=arm64
 
 script:
-  # prepare qemu
-  - docker run --rm --privileged multiarch/qemu-user-static:register --reset
-  # build image
-  - docker build -t blinkt -f Dockerfile.$ARCH .
-  # test image
-  - docker run --entrypoint node blinkt --version
-  # push image
+  - ./build.sh
+  - ./test.sh
   - >
     if [ -n "$TRAVIS_TAG" ]; then
+      # push image
       travis_retry timeout 5m docker login -u="$DOCKER_USER" -p="$DOCKER_PASS"
       ./deploy.sh
     fi
