Show colored stack of running containers via Blinkt!.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,11 @@ env:
 #    - ARCH=arm64
 
 script:
-  - ./build.sh
-  - ./test.sh
+  - ./travis-build.sh
+  - ./travis-test.sh
   - >
     if [ -n "$TRAVIS_TAG" ]; then
       # push image
       travis_retry timeout 5m docker login -u="$DOCKER_USER" -p="$DOCKER_PASS"
-      ./deploy.sh
+      ./travis-deploy.sh
     fi
