--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   },
   "dependencies": {
     "dockerode": "2.3.1",
-    "node-blinkt": "sealsystems/node-blinkt#sysfs",
-    "seal-log": "1.2.0"
+    "node-blinkt": "sealsystems/node-blinkt#sysfs"
   },
   "devDependencies": {
     "assertthat": "0.8.3",
