--- a/Dockerfile.arm-build
+++ b/Dockerfile.arm-build
@@ -2,6 +2,6 @@ FROM hypriot/rpi-node:7.4.0
 
 WORKDIR /code
 COPY package.json /code
-RUN npm install
+RUN npm install --production
 COPY . /code
 CMD ["node", "app.js"]
