--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "dockerode": "2.3.1",
+    "getenv": "^0.7.0",
     "node-blinkt": "sealsystems/node-blinkt#sysfs"
   },
   "devDependencies": {
