--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "assertthat": "0.8.3",
     "eslint-config-seal": "0.0.9",
+    "nodeenv": "^0.2.1",
     "proxyquire": "1.7.11",
     "roboter": "0.14.4",
     "roboter-server": "0.14.4"
