--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
     "report": "npm run coverage && if [[ $OSTYPE == darwin* ]]; then open=open; else open=xdg-open; fi && $open coverage/lcov-report/index.html"
   },
   "dependencies": {
-    "async": "^2.1.4",
+    "async": "2.1.5",
     "dockerode": "2.3.1",
-    "getenv": "^0.7.0",
+    "getenv": "0.7.0",
     "node-blinkt": "sealsystems/node-blinkt#sysfs"
   },
   "devDependencies": {
     "assertthat": "0.8.3",
     "eslint-config-seal": "0.0.9",
-    "nodeenv": "^0.2.1",
+    "nodeenv": "0.2.1",
     "proxyquire": "1.7.11",
     "roboter": "0.14.4",
     "roboter-server": "0.14.4"
