--- a/package.json
+++ b/package.json
@@ -40,6 +40,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/sealsystems/seal-streamparser.git"
+    "url": "https://github.com/plossys/blinkt.git"
   }
 }
